<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="?attr/colorOnPrimary"
	android:padding="@dimen/padding_16"
	android:minWidth="@dimen/min_width_custom_dialog">

	<RadioGroup
		android:id="@+id/radio_group"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent">

		<TextView
			android:id="@+id/alphabet"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:text="@string/filter_dialog_alphabet"/>

		<RadioButton
			android:id="@+id/alphabet_asc_rb"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/filter_dialog_asc"/>

		<RadioButton
			android:id="@+id/alphabet_desc_rb"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/filter_dialog_desc"/>

		<TextView
			android:id="@+id/value"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:text="@string/filter_dialog_value"/>

		<RadioButton
			android:id="@+id/value_asc_rb"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/filter_dialog_asc"/>

		<RadioButton
			android:id="@+id/value_desc_rb"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/filter_dialog_desc"/>
	</RadioGroup>

	<com.google.android.material.button.MaterialButton
		android:id="@+id/accept_button"
		android:layout_width="@dimen/width_0"
		android:layout_height="wrap_content"
		android:layout_margin="@dimen/margin_16"
		android:text="@string/filter_dialog_accept"
		app:layout_constraintTop_toBottomOf="@+id/radio_group"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"/>

	<com.google.android.material.button.MaterialButton
		android:id="@+id/decline_button"
		android:layout_width="@dimen/width_0"
		android:layout_height="wrap_content"
		android:text="@string/filter_dialog_decline"
		app:layout_constraintTop_toBottomOf="@+id/accept_button"
		app:layout_constraintEnd_toEndOf="@+id/accept_button"
		app:layout_constraintStart_toStartOf="@+id/accept_button"/>
</androidx.constraintlayout.widget.ConstraintLayout>